fix: fixed overflow, sign up issue

--- a/packages/frontend/src/style.css
+++ b/packages/frontend/src/style.css
@@ -17,6 +17,7 @@
 
 * {
   font-family: 'Motiva-sans';
+  box-sizing: border-box;
 }
 
 html {
@@ -25,13 +26,17 @@ html {
 
 html,
 body {
-  position: relative;
+  height: auto;
   overflow: hidden;
-  height: 100%;
 }
 
 body {
-  overflow-y: auto;
+  width: 100%;
+  overflow: auto;
+
+  @media (max-width: 970px) {
+    overflow-x: scroll;
+  }
 }
 
 iframe {
